add structure nav in html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,34 @@
 
 <body>
 
+    <nav>
+        <div class="navcontact">
+            <p class="navcontact__phone"><i class="fa-solid fa-phone"></i> Rejestracja: tel. 688688608</p>
+            <p class="navcontact__address"><i class="fa-solid fa-location-dot"></i> Adres: Łódź 00-001 ul. Piotrkowska
+                785</p>
+            <p class="navcontact__mail"><i class="fa-regular fa-envelope"></i> email: medclinic@mail.pl</p>
+        </div>
 
+        <div class="wrapper">
+            <div class="logo">
+                <a href="#Home"><img src="./img/heart-rate.png" alt="logo"></a>
+            </div>
+            <div class="navbar">
+                <a href="#Home" class="navbar__link">Home</a>
+                <a href="#" class="navbar__link">O nas</a>
+                <a href="#" class="navbar__link">Oferta</a>
+                <a href="#" class="navbar__link">Zespół</a>
+                <a href="#" class="navbar__link">Cennik</a>
+                <a href="#" class="navbar__link">Kotakt</a>
+            </div>
+            <div class="burger">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-xmark hide"></i>
+            </div>
+        </div>
+
+
+    </nav>
 
 
 
