add styles for nav 1

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <div class="wrapper">
             <div class="logo">
-                <a href="#Home"><img src="./img/heart-rate.png" alt="logo"></a>
+                <a href="#Home"><img src="./img/logo.png" alt="logo"></a>
             </div>
-            <div class="navbar">
+            <div class="navbar actionnav">
                 <a href="#Home" class="navbar__link">Home</a>
                 <a href="#" class="navbar__link">O nas</a>
                 <a href="#" class="navbar__link">Oferta</a>
@@ -49,7 +49,9 @@
 
     </nav>
 
+    <main>
 
+    </main>
 
 
 
