--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="logo">
                 <a href="#Home"><img src="./img/logo.png" alt="logo"></a>
             </div>
-            <div class="navbar actionnav">
+            <div class="navbar">
                 <a href="#Home" class="navbar__link">Home</a>
                 <a href="#" class="navbar__link">O nas</a>
                 <a href="#" class="navbar__link">Oferta</a>
