first job for home

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
     </nav>
 
     <main>
-
+        <section class="sectionhome" id="Home">
+            <div class="info">
+                <div class="info__heading">
+                    <h1 class="info__heading--text">MedClinic</h1>
+                    <div class="line"></div>
+                </div>
+            </div>
+            <div class="image"></div>
+        </section>
     </main>
 
 
