--- a/index.html
+++ b/index.html
@@ -53,11 +53,31 @@
         <section class="sectionhome" id="Home">
             <div class="info">
                 <div class="info__heading">
-                    <h1 class="info__heading--text">MedClinic</h1>
+                    <h1 class="info__heading--head">MedClinic</h1>
+                    <div class="line"></div>
+                </div>
+                <div class="info__text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur non fugit amet nobis iste,
+                        obcaecati repudiandae modi fuga dignissimos similique. Aperiam vitae corporis quod dolor
+                        tenetur! Sapiente sint similique quibusdam.
+                    </p>
+                    <div class="line"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur non fugit amet nobis iste,
+                        obcaecati repudiandae modi fuga dignissimos similique. Aperiam vitae corporis quod dolor
+                        tenetur! Sapiente sint similique quibusdam.
+                    </p>
                     <div class="line"></div>
                 </div>
             </div>
-            <div class="image"></div>
+            <div class="image">
+                <img src="./img/hero.jpg" alt="zdjęcie lekarzy">
+                <div class="image__info">
+                    <div class="logo">
+                        <img src="./img/logo.png" alt="logo">
+                    </div>
+                    <h1>Pacjent najważniejszy</h1>
+                </div>
+            </div>
         </section>
     </main>
 
