added styles medium

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <a href="#" class="navbar__link">O nas</a>
                 <a href="#" class="navbar__link">Oferta</a>
                 <a href="#" class="navbar__link">Zespół</a>
-                <a href="#" class="navbar__link">Cennik</a>
                 <a href="#" class="navbar__link">Kotakt</a>
             </div>
             <div class="burger">
@@ -75,7 +74,7 @@
                     <div class="logo">
                         <img src="./img/logo.png" alt="logo">
                     </div>
-                    <h1>Pacjent najważniejszy</h1>
+                    <h1>Pacjent jest najważniejszy</h1>
                 </div>
             </div>
         </section>
