added style xxlarge in section home and change color

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="sectionhome" id="Home">
             <div class="info">
                 <div class="info__heading">
-                    <h1 class="info__heading--head">MedClinic</h1>
+                    <h1 class="info__heading--head">Med<span class="pink">Clinic</span></h1>
                     <div class="line"></div>
                 </div>
                 <div class="info__text">
