--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="navbar">
                 <a href="#Home" class="navbar__link">Home</a>
-                <a href="#" class="navbar__link">O nas</a>
+                <a href="#Aboutus" class="navbar__link">O nas</a>
                 <a href="#" class="navbar__link">Oferta</a>
                 <a href="#" class="navbar__link">Zespół</a>
                 <a href="#" class="navbar__link">Kotakt</a>
@@ -75,6 +75,42 @@
                         <img src="./img/logo.png" alt="logo">
                     </div>
                     <h1>Pacjent jest najważniejszy</h1>
+                </div>
+            </div>
+        </section>
+
+        <section class="aboutus" id="Aboutus">
+
+            <div class="infomobile">
+                <div class="infodoctors">
+                    <i class="fa-solid fa-stethoscope"></i>
+                    <h2>11</h2>
+                    <p>lekarzy specjalistów</p>
+                </div>
+                <div class="infobed">
+                    <i class="fa-solid fa-bed-pulse"></i>
+                    <h2>54</h2>
+                    <p>dostępnych łóżek</p>
+                </div>
+                <div class="infopatient">
+                    <i class="fa-solid fa-user-group"></i>
+                    <h2>519</h2>
+                    <p>pacjentów rocznie</p>
+                </div>
+            </div>
+
+
+            <div class="box">
+                <div class="box__info">
+                    <h1 class="box__info--heading">Nowoczesny obiekt</h1>
+                    <div class="line"></div>
+                    <p class="box__info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aperiam
+                        eius recusandae et porro nisi voluptate ducimus asperiores, quam laboriosam?</p>
+                    <div class="line"></div>
+                </div>
+                <div class="box__img">
+                    <img src="./img/hospital_inside.jpg" alt="zdjęcie recepcji">
+                    <button class="btnabout">Obejrzyj galerię</button>
                 </div>
             </div>
         </section>
