--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
         <section class="aboutus" id="Aboutus">
 
             <div class="infomobile">
-                <div class="info">
+                <div class="infocount">
                     <i class="fa-solid fa-stethoscope"></i>
-                    <div class="info__count" data-number="11">0</div>
+                    <div class="infocount__count" data-number="11">0</div>
                     <h3>lekarzy specjalistów</h3>
                 </div>
-                <div class="info">
+                <div class="infocount">
                     <i class="fa-solid fa-bed-pulse"></i>
-                    <div class="info__count" data-number="51">0</div>
+                    <div class="infocount__count" data-number="51">0</div>
                     <h3>dostępych łóżek</h3>
                 </div>
-                <div class="info">
+                <div class="infocount">
                     <i class="fa-solid fa-user-group"></i>
-                    <div class="info__count" data-number="249">0</div>
+                    <div class="infocount__count" data-number="249">0</div>
                     <h3>pacjentów rocznie</h3>
                 </div>
             </div>
 
 
-            <!-- <div class="box">
+            <div class="box">
                 <div class="box__info">
                     <h1 class="box__info--heading">Nowoczesny obiekt</h1>
                     <div class="line"></div>
@@ -112,7 +112,7 @@
                     <img src="./img/hospital_inside.jpg" alt="zdjęcie recepcji">
                     <button class="btnabout">Obejrzyj galerię</button>
                 </div>
-            </div> -->
+            </div>
         </section>
     </main>
 
