added styles small for section about us

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             </div>
         </section>
 
-        <section class="aboutus" id="Aboutus">
+        <section class="sectionaboutus" id="Aboutus">
 
             <div class="infomobile">
                 <div class="infocount">
                     <i class="fa-solid fa-stethoscope"></i>
-                    <div class="infocount__count" data-number="11">0</div>
+                    <div class="infocount__count" data-number="14">0</div>
                     <h3>lekarzy specjalistów</h3>
                 </div>
                 <div class="infocount">
