--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                 </div>
                 <div class="box__img">
                     <img src="./img/hospital_inside.jpg" alt="zdjęcie recepcji">
-                    <button class="btnabout">Obejrzyj galerię</button>
+                    <button class="btnabout">
+                        <a href="">Obejrzyj galerię</a>
+                    </button>
                 </div>
             </div>
         </section>
