--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="box__img">
                     <img src="./img/hospital_inside.jpg" alt="zdjęcie recepcji">
                     <button class="btnabout">
-                        <a href="">Obejrzyj galerię</a>
+                        <a href="./galleryobj.html">Obejrzyj galerię</a>
                     </button>
                 </div>
             </div>
