preparing one slider for section gallery object

--- a/galleryobj.html
+++ b/galleryobj.html
@@ -15,6 +15,8 @@
 
     <script src="https://kit.fontawesome.com/2ab53ed4ce.js" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -49,11 +51,32 @@
     </nav>
 
     <main>
+        <section class="galleryclinic">
 
+            <div class="swipperobj object">
+                <div class="swipperobject">
+                    <div class="obj">
+                        <div class="obj__img"> <img src="./img/objects/object_01.jpg" alt="objekty szpitalne"></div>
+                        <div class="obj__text">
+                            <h1>Nowoczesny budynek</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+        </section>
     </main>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/galleryobj.js"></script>
 </body>
 
