added slider and first styles for gallery object

--- a/galleryobj.html
+++ b/galleryobj.html
@@ -53,12 +53,72 @@
     <main>
         <section class="galleryclinic">
 
-            <div class="swipperobj object">
-                <div class="swipperobject">
-                    <div class="obj">
-                        <div class="obj__img"> <img src="./img/objects/object_01.jpg" alt="objekty szpitalne"></div>
-                        <div class="obj__text">
+            <div class="swiper sliders">
+                <div class="swipperobject swiper-wrapper">
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_01.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
                             <h1>Nowoczesny budynek</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_02.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
+                            <h1>Miłe przyjęcie pacjenta na naszej recepcji</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_03.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
+                            <h1>Nasza poczekalnia nie przypomina szpitala</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_04.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
+                            <h1>Rodzina zawsze blisko</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_05.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
+                            <h1>Dysponujemy nowoczesnym sprzętem</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_06.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
+                            <h1>W pokoju lekarskim pełne skupienie</h1>
+                            <div class="line"></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
+                            </p>
+                            <div class="line"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide obj">
+                        <div class="img"> <img src="./img/objects/object_07.jpg" alt="objekty szpitalne"></div>
+                        <div class="slidertext">
+                            <h1>Sala operacyjna w pełni wyposażona</h1>
                             <div class="line"></div>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa repellat illo cupiditate.
                             </p>
@@ -67,8 +127,8 @@
                     </div>
                 </div>
 
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next rightobj"></div>
+                <div class="swiper-button-prev leftobj"></div>
                 <div class="swiper-pagination"></div>
             </div>
 
