--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="navbar">
                 <a href="#Home" class="navbar__link">Home</a>
                 <a href="#Aboutus" class="navbar__link">O nas</a>
-                <a href="#" class="navbar__link">Oferta</a>
+                <a href="#Offer" class="navbar__link">Oferta</a>
                 <a href="#" class="navbar__link">Zespół</a>
                 <a href="#" class="navbar__link">Kotakt</a>
             </div>
@@ -115,6 +115,13 @@
                     </button>
                 </div>
             </div>
+        </section>
+        <section class="sectionoffer" id="Offer">
+            <div class="boxheading">
+                <img src="./img/logo.png" alt="logo" class="boxheading__logo">
+                <h1 class="boxheading__heading">Sprawdź naszą ofertę i cennik</h1>
+            </div>
+            <div class="line"></div>
         </section>
     </main>
 
