added html for accordion in section offer

--- a/index.html
+++ b/index.html
@@ -122,6 +122,124 @@
                 <h1 class="boxheading__heading">Sprawdź naszą ofertę i cennik</h1>
                 <div class="line"></div>
             </div>
+            <div class="accordion">
+                <div class="accordionbox">
+                    <div class="accordionhead">
+                        <h2 class="accordionhead__heading">Wizyta w gabinecie</h2>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="accordioninfo">
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Pierwsza wizyta u specjalisty</p>
+                            <p class="accordion__info--price">250 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Kolejne wizyty u specjalisty</p>
+                            <p class="accordion__info--price">150 zł</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordionbox">
+                    <div class="accordionhead">
+                        <h2 class="accordionhead__heading">Badania</h2>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="accordioninfo">
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">USG</p>
+                            <p class="accordion__info--price">320 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">EKG</p>
+                            <p class="accordion__info--price">470 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Próba wysiłkowa</p>
+                            <p class="accordion__info--price">220 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Badanie holterowskie</p>
+                            <p class="accordion__info--price">480 zł</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordionbox">
+                    <div class="accordionhead">
+                        <h2 class="accordionhead__heading">Zabiegi</h2>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="accordioninfo">
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
+                            <p class="accordion__info--price">610 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem ipsum dolor sit.</p>
+                            <p class="accordion__info--price">520 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem, ipsum.</p>
+                            <p class="accordion__info--price">700 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem ipsum dolor sit.</p>
+                            <p class="accordion__info--price">1200 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
+                            <p class="accordion__info--price">840 zł</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordionbox">
+                    <div class="accordionhead">
+                        <h2 class="accordionhead__heading">Operacje</h2>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="accordioninfo">
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
+                            <p class="accordion__info--price">1790 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem, ipsum.</p>
+                            <p class="accordion__info--price">1530 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem ipsum dolor sit.</p>
+                            <p class="accordion__info--price">2250 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
+                            <p class="accordion__info--price">1900 zł</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordionbox">
+                    <div class="accordionhead">
+                        <h2 class="accordionhead__heading">Pobyt w klinice</h2>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="accordioninfo">
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Doba</p>
+                            <p class="accordion__info--price">100 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Tydzień</p>
+                            <p class="accordion__info--price">620 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordion__info--text">Kolejny dzięń</p>
+                            <p class="accordion__info--price">75 zł</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
