added styles for accordionhead

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                 <h1 class="boxheading__heading">Sprawdź naszą ofertę i cennik</h1>
                 <div class="line"></div>
             </div>
-            <div class="accordion">
-                <div class="accordionbox">
+            <div class="accordionbox">
+                <div class="accordion">
                     <div class="accordionhead">
                         <h2 class="accordionhead__heading">Wizyta w gabinecie</h2>
-                        <i class="fa-solid fa-chevron-down"></i>
+                        <i class="fa-solid fa-chevron-down accordionarrow"></i>
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
@@ -140,10 +140,10 @@
                     </div>
                 </div>
 
-                <div class="accordionbox">
+                <div class="accordion">
                     <div class="accordionhead">
                         <h2 class="accordionhead__heading">Badania</h2>
-                        <i class="fa-solid fa-chevron-down"></i>
+                        <i class="fa-solid fa-chevron-down accordionarrow"></i>
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
@@ -165,10 +165,10 @@
                     </div>
                 </div>
 
-                <div class="accordionbox">
+                <div class="accordion">
                     <div class="accordionhead">
                         <h2 class="accordionhead__heading">Zabiegi</h2>
-                        <i class="fa-solid fa-chevron-down"></i>
+                        <i class="fa-solid fa-chevron-down accordionarrow"></i>
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
@@ -194,10 +194,10 @@
                     </div>
                 </div>
 
-                <div class="accordionbox">
+                <div class="accordion">
                     <div class="accordionhead">
                         <h2 class="accordionhead__heading">Operacje</h2>
-                        <i class="fa-solid fa-chevron-down"></i>
+                        <i class="fa-solid fa-chevron-down accordionarrow"></i>
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
@@ -219,10 +219,10 @@
                     </div>
                 </div>
 
-                <div class="accordionbox">
+                <div class="accordion">
                     <div class="accordionhead">
                         <h2 class="accordionhead__heading">Pobyt w klinice</h2>
-                        <i class="fa-solid fa-chevron-down"></i>
+                        <i class="fa-solid fa-chevron-down accordionarrow"></i>
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
