added styles for accordion

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Pierwsza wizyta u specjalisty</p>
-                            <p class="accordion__info--price">250 zł</p>
+                            <p class="accordioninfo__offer--text">Pierwsza wizyta u specjalisty</p>
+                            <p class="accordioninfo__offer--price">250 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Kolejne wizyty u specjalisty</p>
-                            <p class="accordion__info--price">150 zł</p>
+                            <p class="accordioninfo__offer--text">Kolejne wizyty u specjalisty</p>
+                            <p class="accordioninfo__offer--price">150 zł</p>
                         </div>
                     </div>
                 </div>
@@ -147,20 +147,20 @@
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">USG</p>
-                            <p class="accordion__info--price">320 zł</p>
+                            <p class="accordioninfo__offer--text">USG</p>
+                            <p class="accordioninfo__offer--price">320 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">EKG</p>
-                            <p class="accordion__info--price">470 zł</p>
+                            <p class="accordioninfo__offer--textt">EKG</p>
+                            <p class="accordioninfo__offer--price">470 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Próba wysiłkowa</p>
-                            <p class="accordion__info--price">220 zł</p>
+                            <p class="accordioninfo__offer--text">Próba wysiłkowa</p>
+                            <p class="accordioninfo__offer--price">220 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Badanie holterowskie</p>
-                            <p class="accordion__info--price">480 zł</p>
+                            <p class="accordioninfo__offer--text">Badanie holterowskie</p>
+                            <p class="accordioninfo__offer--price">480 zł</p>
                         </div>
                     </div>
                 </div>
@@ -172,24 +172,24 @@
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
-                            <p class="accordion__info--price">610 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
+                            <p class="accordioninfo__offer--price">610 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem ipsum dolor sit.</p>
-                            <p class="accordion__info--price">520 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem ipsum dolor sit.</p>
+                            <p class="accordioninfo__offer--price">520 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem, ipsum.</p>
-                            <p class="accordion__info--price">700 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem, ipsum.</p>
+                            <p class="accordioninfo__offer--price">700 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem ipsum dolor sit.</p>
-                            <p class="accordion__info--price">1200 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem ipsum dolor sit.</p>
+                            <p class="accordioninfo__offer--price">1200 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
-                            <p class="accordion__info--price">840 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
+                            <p class="accordioninfo__offer--price">840 zł</p>
                         </div>
                     </div>
                 </div>
@@ -201,20 +201,20 @@
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
-                            <p class="accordion__info--price">1790 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
+                            <p class="accordioninfo__offer--price">1790 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem, ipsum.</p>
-                            <p class="accordion__info--price">1530 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem, ipsum.</p>
+                            <p class="accordioninfo__offer--price">1530 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem ipsum dolor sit.</p>
-                            <p class="accordion__info--price">2250 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem ipsum dolor sit.</p>
+                            <p class="accordioninfo__offer--price">2250 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Lorem, ipsum dolor.</p>
-                            <p class="accordion__info--price">1900 zł</p>
+                            <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
+                            <p class="accordioninfo__offer--price">1900 zł</p>
                         </div>
                     </div>
                 </div>
@@ -226,16 +226,16 @@
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Doba</p>
-                            <p class="accordion__info--price">100 zł</p>
+                            <p class="accordioninfo__offer--text">Doba</p>
+                            <p class="accordioninfo__offer--price">100 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Tydzień</p>
-                            <p class="accordion__info--price">620 zł</p>
+                            <p class="accordioninfo__offer--text">Tydzień</p>
+                            <p class="accordioninfo__offer--price">620 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordion__info--text">Kolejny dzięń</p>
-                            <p class="accordion__info--price">75 zł</p>
+                            <p class="accordioninfo__offer--text">Kolejny dzięń</p>
+                            <p class="accordioninfo__offer--price">75 zł</p>
                         </div>
                     </div>
                 </div>
