added html styles and js for section offer

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </div>
                     <div class="accordioninfo">
                         <div class="accordioninfo__offer">
-                            <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
+                            <p class="accordioninfo__offer--text">Lorem ipsum dolor sit amet</p>
                             <p class="accordioninfo__offer--price">1790 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
@@ -211,6 +211,10 @@
                         <div class="accordioninfo__offer">
                             <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
                             <p class="accordioninfo__offer--price">1900 zł</p>
+                        </div>
+                        <div class="accordioninfo__offer">
+                            <p class="accordioninfo__offer--text">Lorem, ipsum dolor.</p>
+                            <p class="accordioninfo__offer--price">2770 zł</p>
                         </div>
                     </div>
                 </div>
@@ -230,11 +234,19 @@
                             <p class="accordioninfo__offer--price">620 zł</p>
                         </div>
                         <div class="accordioninfo__offer">
-                            <p class="accordioninfo__offer--text">Kolejny dzięń</p>
+                            <p class="accordioninfo__offer--text">Kolejny dzięń po 7 dniach</p>
                             <p class="accordioninfo__offer--price">75 zł</p>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="infooffer">
+                <div class="infooffer__img">
+                    <img src="./img/logo.png" alt="logo">
+                </div>
+                <p class="infooffer__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dolorum iste
+                    vel
+                    culpa voluptatem nesciunt aliquam numquam.</p>
             </div>
         </section>
     </main>
