preparing section teams

--- a/galleryobj.html
+++ b/galleryobj.html
@@ -38,7 +38,8 @@
                 <a href="./index.html#Home" class="navbar__link">Home</a>
                 <a href="./index.html#Aboutus" class="navbar__link">O nas</a>
                 <a href="./index.html#Offer" class="navbar__link">Oferta</a>
-                <a href="#" class="navbar__link">Zespół</a>
+                <a href="./teams.html" class="navbar__link">Zespół</a>
+                <a href="#" class="navbar__link">Opinie</a>
                 <a href="#" class="navbar__link">Kotakt</a>
             </div>
             <div class="burger">
