--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <a href="#Home" class="navbar__link">Home</a>
                 <a href="#Aboutus" class="navbar__link">O nas</a>
                 <a href="#Offer" class="navbar__link">Oferta</a>
-                <a href="#" class="navbar__link">Zespół</a>
+                <a href="./teams.html" class="navbar__link">Zespół</a>
+                <a href="#" class="navbar__link">Opinie</a>
                 <a href="#" class="navbar__link">Kotakt</a>
             </div>
             <div class="burger">
