added html for section teams

--- a/teams.html
+++ b/teams.html
@@ -51,7 +51,25 @@
     </nav>
 
     <main>
-        <section class="teams"></section>
+        <section class="teams">
+            <div class="heading">
+                <h1>Poznaj nasz zespół</h1>
+                <div class="line"></div>
+            </div>
+            <div class="teams">
+                <div class="teams__img">
+                    <img src="./img/teams/doc_01.jpg" alt="doctor">
+                </div>
+                <div class="teams__info">
+                    <i class="fa-solid fa-quote-right"></i>
+                    <p class="teams__info--tekst">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis illo
+                        labore suscipit tenetur quisquam consequuntur voluptatibus magni laborum magnam deleniti.</p>
+                    <p class="info__info--person">prof. dr hab</p>
+                    <p class="info__info--person">Adam Kowalski</p>
+                    <button class="btnteams">Zobacz galerię</button>
+                </div>
+            </div>
+        </section>
     </main>
 
 
