added styles for section teams

--- a/teams.html
+++ b/teams.html
@@ -62,10 +62,13 @@
                 </div>
                 <div class="teams__info">
                     <i class="fa-solid fa-quote-right"></i>
-                    <p class="teams__info--tekst">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis illo
+                    <p class="teams__info--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis illo
                         labore suscipit tenetur quisquam consequuntur voluptatibus magni laborum magnam deleniti.</p>
-                    <p class="info__info--person">prof. dr hab</p>
-                    <p class="info__info--person">Adam Kowalski</p>
+                    <div class="signature">
+                        <p class="signature__text">prof. dr hab</p>
+                        <p class="signature__text">Adam Kowalski</p>
+                        <p class="signature__text">dyrektor kliniki</p>
+                    </div>
                     <button class="btnteams">Zobacz galerię</button>
                 </div>
             </div>
