added style for small in section teams

--- a/teams.html
+++ b/teams.html
@@ -51,7 +51,7 @@
     </nav>
 
     <main>
-        <section class="teams">
+        <section class="sectionteams">
             <div class="heading">
                 <h1>Poznaj nasz zespół</h1>
                 <div class="line"></div>
