--- a/teams.html
+++ b/teams.html
@@ -15,6 +15,8 @@
 
     <script src="https://kit.fontawesome.com/2ab53ed4ce.js" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
@@ -56,7 +58,7 @@
                 <h1>Poznaj nasz zespół</h1>
                 <div class="line"></div>
             </div>
-            <div class="teams">
+            <div class="teams teamsscale">
                 <div class="teams__img">
                     <img src="./img/teams/doc_01.jpg" alt="doctor">
                 </div>
@@ -72,6 +74,33 @@
                     <button class="btnteams">Zobacz galerię</button>
                 </div>
             </div>
+
+            <div class="swiper teamswiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_02.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_03.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
         </section>
     </main>
 
@@ -81,7 +110,7 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/teams.js"></script>
 </body>
 
