--- a/teams.html
+++ b/teams.html
@@ -58,7 +58,7 @@
                 <h1>Poznaj nasz zespół</h1>
                 <div class="line"></div>
             </div>
-            <div class="teams teamsscale">
+            <div class="teams">
                 <div class="teams__img">
                     <img src="./img/teams/doc_01.jpg" alt="doctor">
                 </div>
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="swiper teamswiper">
+            <div class="swiper teamswiper swiperscale">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_02.jpg" alt="" class="card__img">
@@ -86,8 +86,99 @@
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
                     </div>
+
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_03.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_04.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_05.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_06.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_07.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_08.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_09.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_10.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_11.jpg" alt="" class="card__img">
+                        <div class="card__text">
+                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <div class="line"></div>
+                        </div>
+                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                    </div>
+
+                    <div class="swiper-slide card">
+                        <img src="./img/teams/doc_14.jpg" alt="" class="card__img">
                         <div class="card__text">
                             <p class="card__text--info">prof dr hab</p>
                             <p class="card__text--info">Aleksander Malinowski</p>
